# rust-sdk

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: Choice.md  CompletionOptions.md  CompletionRequest.md  CompletionResponse.md  CompletionsApi.md  ContentPart.md  ContentPartOneOf.md  ContentPartOneOf1.md  FeedbackApi.md  ImageUrl.md  InvalidateResponse.md  Message.md  MessageContent.md  Provider.md  SemanticCacheApi.md  SemanticCacheConfig.md  SemanticCacheStats.md  SubmitFeedbackRequest.md  SubmitFeedbackResponse.md  Usage.md
src/apis/: completions_api.rs  configuration.rs  feedback_api.rs  mod.rs  semantic_cache_api.rs
src/models/: choice.rs  completion_options.rs  completion_request.rs  completion_response.rs  content_part.rs  content_part_one_of.rs  content_part_one_of_1.rs  image_url.rs  invalidate_response.rs  message.rs  message_content.rs  mod.rs  provider.rs  semantic_cache_config.rs  semantic_cache_stats.rs  submit_feedback_request.rs  submit_feedback_response.rs  usage.rs
